--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@theme{
+    --color-strong-cyan: hsl(171, 66%, 44%);
+    --color-light-blue: hsl(233, 100%, 69%);
+
+    --color-dark-grayish-blue: hsl(210, 10%, 33%);
+    --color-grayish-blue: hsl(201, 11%, 66%);
+
+    --font-Bai: "Bai Jamjuree", sans-serif;
+
+}
