--- a/src/output.css
+++ b/src/output.css
@@ -375,6 +375,15 @@
   .px-15 {
     padding-inline: calc(var(--spacing) * 15);
   }
+  .px-18 {
+    padding-inline: calc(var(--spacing) * 18);
+  }
+  .px-19 {
+    padding-inline: calc(var(--spacing) * 19);
+  }
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
