--- a/src/output.css
+++ b/src/output.css
@@ -266,6 +266,9 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-fit {
+    width: fit-content;
+  }
   .w-full {
     width: 100%;
   }
@@ -277,6 +280,9 @@
   }
   .min-w-full {
     min-width: 100%;
+  }
+  .flex-1 {
+    flex: 1;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -295,6 +301,9 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
@@ -363,6 +372,12 @@
   .px-35 {
     padding-inline: calc(var(--spacing) * 35);
   }
+  .px-52 {
+    padding-inline: calc(var(--spacing) * 52);
+  }
+  .px-96 {
+    padding-inline: calc(var(--spacing) * 96);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -377,6 +392,9 @@
   }
   .text-center {
     text-align: center;
+  }
+  .text-left {
+    text-align: left;
   }
   .font-Bai {
     font-family: var(--font-Bai);
@@ -451,6 +469,16 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .lg\:mt-0 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:mb-0 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 0);
+    }
+  }
   .lg\:mb-10 {
     @media (width >= 64rem) {
       margin-bottom: calc(var(--spacing) * 10);
@@ -494,6 +522,16 @@
       width: 100%;
     }
   }
+  .lg\:max-w-2xl {
+    @media (width >= 64rem) {
+      max-width: var(--container-2xl);
+    }
+  }
+  .lg\:max-w-3xl {
+    @media (width >= 64rem) {
+      max-width: var(--container-3xl);
+    }
+  }
   .lg\:min-w-full {
     @media (width >= 64rem) {
       min-width: 100%;
@@ -504,6 +542,21 @@
       flex-direction: row;
     }
   }
+  .lg\:justify-between {
+    @media (width >= 64rem) {
+      justify-content: space-between;
+    }
+  }
+  .lg\:justify-evenly {
+    @media (width >= 64rem) {
+      justify-content: space-evenly;
+    }
+  }
+  .lg\:gap-36 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 36);
+    }
+  }
   .lg\:bg-\[url\(\/images\/bg-header-desktop\.png\)\] {
     @media (width >= 64rem) {
       background-image: url(/images/bg-header-desktop.png);
@@ -512,6 +565,16 @@
   .lg\:bg-\[url\(\/images\/bg-header-mobile\.png\)\] {
     @media (width >= 64rem) {
       background-image: url(/images/bg-header-mobile.png);
+    }
+  }
+  .lg\:px-0\.5 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 0.5);
+    }
+  }
+  .lg\:px-5 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 5);
     }
   }
   .lg\:px-15 {
@@ -537,6 +600,11 @@
   .lg\:px-50 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 50);
+    }
+  }
+  .lg\:px-52 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 52);
     }
   }
   .lg\:px-70 {
