--- a/src/output.css
+++ b/src/output.css
@@ -33,6 +33,8 @@
     --spacing: 0.25rem;
     --container-2xl: 42rem;
     --container-3xl: 48rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
@@ -198,9 +200,6 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-15 {
-    margin-top: calc(var(--spacing) * 15);
-  }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
   }
@@ -228,9 +227,6 @@
   .mb-28 {
     margin-bottom: calc(var(--spacing) * 28);
   }
-  .mb-32 {
-    margin-bottom: calc(var(--spacing) * 32);
-  }
   .mb-44 {
     margin-bottom: calc(var(--spacing) * 44);
   }
@@ -243,12 +239,31 @@
   .flex {
     display: flex;
   }
+  .hidden {
+    display: none;
+  }
   .table {
     display: table;
+  }
+  .size-3 {
+    width: calc(var(--spacing) * 3);
+    height: calc(var(--spacing) * 3);
+  }
+  .size-5 {
+    width: calc(var(--spacing) * 5);
+    height: calc(var(--spacing) * 5);
+  }
+  .size-6 {
+    width: calc(var(--spacing) * 6);
+    height: calc(var(--spacing) * 6);
   }
   .size-12 {
     width: calc(var(--spacing) * 12);
     height: calc(var(--spacing) * 12);
+  }
+  .size-24 {
+    width: calc(var(--spacing) * 24);
+    height: calc(var(--spacing) * 24);
   }
   .size-36 {
     width: calc(var(--spacing) * 36);
@@ -266,9 +281,6 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-fit {
-    width: fit-content;
-  }
   .w-full {
     width: 100%;
   }
@@ -280,9 +292,6 @@
   }
   .min-w-full {
     min-width: 100%;
-  }
-  .flex-1 {
-    flex: 1;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -299,20 +308,32 @@
   .items-center {
     align-items: center;
   }
+  .justify-between {
+    justify-content: space-between;
+  }
   .justify-center {
     justify-content: center;
   }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
+  .justify-evenly {
+    justify-content: space-evenly;
+  }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
-  .gap-7 {
-    gap: calc(var(--spacing) * 7);
-  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
+  }
+  .self-end {
+    align-self: flex-end;
+  }
+  .self-start {
+    align-self: flex-start;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -372,12 +393,6 @@
   .px-35 {
     padding-inline: calc(var(--spacing) * 35);
   }
-  .px-52 {
-    padding-inline: calc(var(--spacing) * 52);
-  }
-  .px-96 {
-    padding-inline: calc(var(--spacing) * 96);
-  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -393,9 +408,6 @@
   .text-center {
     text-align: center;
   }
-  .text-left {
-    text-align: left;
-  }
   .font-Bai {
     font-family: var(--font-Bai);
   }
@@ -410,6 +422,10 @@
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
   }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
@@ -489,10 +505,10 @@
       display: flex;
     }
   }
-  .lg\:size-2 {
+  .lg\:size-5 {
     @media (width >= 64rem) {
-      width: calc(var(--spacing) * 2);
-      height: calc(var(--spacing) * 2);
+      width: calc(var(--spacing) * 5);
+      height: calc(var(--spacing) * 5);
     }
   }
   .lg\:size-20 {
@@ -501,30 +517,9 @@
       height: calc(var(--spacing) * 20);
     }
   }
-  .lg\:size-28 {
-    @media (width >= 64rem) {
-      width: calc(var(--spacing) * 28);
-      height: calc(var(--spacing) * 28);
-    }
-  }
   .lg\:w-2xl {
     @media (width >= 64rem) {
       width: var(--container-2xl);
-    }
-  }
-  .lg\:w-3xl {
-    @media (width >= 64rem) {
-      width: var(--container-3xl);
-    }
-  }
-  .lg\:w-full {
-    @media (width >= 64rem) {
-      width: 100%;
-    }
-  }
-  .lg\:max-w-2xl {
-    @media (width >= 64rem) {
-      max-width: var(--container-2xl);
     }
   }
   .lg\:max-w-3xl {
@@ -537,9 +532,19 @@
       min-width: 100%;
     }
   }
+  .lg\:flex-col {
+    @media (width >= 64rem) {
+      flex-direction: column;
+    }
+  }
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
+    }
+  }
+  .lg\:items-center {
+    @media (width >= 64rem) {
+      align-items: center;
     }
   }
   .lg\:justify-between {
@@ -552,9 +557,34 @@
       justify-content: space-evenly;
     }
   }
-  .lg\:gap-36 {
+  .lg\:gap-2 {
     @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 36);
+      gap: calc(var(--spacing) * 2);
+    }
+  }
+  .lg\:gap-3 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 3);
+    }
+  }
+  .lg\:gap-4 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 4);
+    }
+  }
+  .lg\:gap-10 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:gap-15 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 15);
+    }
+  }
+  .lg\:self-start {
+    @media (width >= 64rem) {
+      align-self: flex-start;
     }
   }
   .lg\:bg-\[url\(\/images\/bg-header-desktop\.png\)\] {
@@ -562,39 +592,14 @@
       background-image: url(/images/bg-header-desktop.png);
     }
   }
-  .lg\:bg-\[url\(\/images\/bg-header-mobile\.png\)\] {
-    @media (width >= 64rem) {
-      background-image: url(/images/bg-header-mobile.png);
-    }
-  }
-  .lg\:px-0\.5 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 0.5);
-    }
-  }
-  .lg\:px-5 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 5);
-    }
-  }
   .lg\:px-15 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 15);
     }
   }
-  .lg\:px-20 {
+  .lg\:px-32 {
     @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 20);
-    }
-  }
-  .lg\:px-30 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 30);
-    }
-  }
-  .lg\:px-40 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 40);
+      padding-inline: calc(var(--spacing) * 32);
     }
   }
   .lg\:px-50 {
